@@ -243,6 +243,10 @@ Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "GoogleAnalyticsController",
 EndProject
 Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "WhiteboardPDFController", "Controllers\WhiteboardPDFController\WhiteboardPDFController.csproj", "{32FFEFC3-9EF8-411B-8F55-1686B553F0D8}"
 EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "InstalledAppsController", "Controllers\InstalledAppsController\InstalledAppsController.csproj", "{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}"
+EndProject
+Project("{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}") = "InstalledAppsModules", "Modules\InstalledAppsModules\InstalledAppsModules.csproj", "{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}"
+EndProject
 Global
 	GlobalSection(SolutionConfigurationPlatforms) = preSolution
 		Debug|.NET = Debug|.NET
@@ -1349,6 +1353,36 @@ Global
 		{32FFEFC3-9EF8-411B-8F55-1686B553F0D8}.Release|Any CPU.Build.0 = Release|Any CPU
 		{32FFEFC3-9EF8-411B-8F55-1686B553F0D8}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
 		{32FFEFC3-9EF8-411B-8F55-1686B553F0D8}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Debug|.NET.ActiveCfg = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.DebugTests|.NET.ActiveCfg = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.DebugTests|Any CPU.ActiveCfg = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.DebugTests|Any CPU.Build.0 = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.DebugTests|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.DebugTests|Mixed Platforms.Build.0 = Debug|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Release|.NET.ActiveCfg = Release|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Release|Any CPU.Build.0 = Release|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A}.Release|Mixed Platforms.Build.0 = Release|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Debug|.NET.ActiveCfg = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Debug|Any CPU.Build.0 = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Debug|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Debug|Mixed Platforms.Build.0 = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.DebugTests|.NET.ActiveCfg = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.DebugTests|Any CPU.ActiveCfg = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.DebugTests|Any CPU.Build.0 = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.DebugTests|Mixed Platforms.ActiveCfg = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.DebugTests|Mixed Platforms.Build.0 = Debug|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Release|.NET.ActiveCfg = Release|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Release|Any CPU.ActiveCfg = Release|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Release|Any CPU.Build.0 = Release|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Release|Mixed Platforms.ActiveCfg = Release|Any CPU
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672}.Release|Mixed Platforms.Build.0 = Release|Any CPU
 	EndGlobalSection
 	GlobalSection(SolutionProperties) = preSolution
 		HideSolutionNode = FALSE
@@ -1385,6 +1419,7 @@ Global
 		{BC240683-197D-4327-91B5-56C23BEAC5DF} = {0E2B47F4-94B4-43F4-8366-6F4A59DF291A}
 		{90BE29CE-9FBD-446F-B74B-0FCC6B070D48} = {0E2B47F4-94B4-43F4-8366-6F4A59DF291A}
 		{A89452D1-6B1E-408B-8B6C-B8C3467C8328} = {0E2B47F4-94B4-43F4-8366-6F4A59DF291A}
+		{DD0AA1DD-6471-4821-9CD4-D0CFC5DE0672} = {0E2B47F4-94B4-43F4-8366-6F4A59DF291A}
 		{E1135609-DDE1-4777-923E-9890B4498BAF} = {5EB48762-9C0E-40AF-8BB5-3E80D6EA2FED}
 		{1A6C334E-159A-4189-AA03-F8CC1639A7D0} = {C2BFAFC2-8C22-45FE-A81B-521980799550}
 		{D4F36AD3-4364-4CB8-9B8E-BEE281838AD1} = {C2BFAFC2-8C22-45FE-A81B-521980799550}
@@ -1411,6 +1446,7 @@ Global
 		{D8906915-85CB-4627-9278-389D1E60F503} = {C2BFAFC2-8C22-45FE-A81B-521980799550}
 		{A417532F-BC0C-40C7-8C07-69CAA5585EF3} = {C2BFAFC2-8C22-45FE-A81B-521980799550}
 		{32FFEFC3-9EF8-411B-8F55-1686B553F0D8} = {C2BFAFC2-8C22-45FE-A81B-521980799550}
+		{D2DF8CCF-7A31-4D14-B31A-ED9CA986158A} = {C2BFAFC2-8C22-45FE-A81B-521980799550}
 		{3E847F44-BC2C-4C42-B612-2C9934E8BB38} = {527E28AB-4D8B-421B-BF57-164FC2490AF6}
 		{853598D1-F9CF-48C2-90DD-354480F34F91} = {78691633-E015-42BA-B2D4-385CE26395C6}
 		{87C08A87-ACE9-4B8C-95A9-73DA83EE1F0A} = {78691633-E015-42BA-B2D4-385CE26395C6}
